<resources>
    <string name="app_name">firebaseEjemplo</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar Sesion</string>

    <string name="menu_test_firebase">Pruebas Firebase</string>
    <string name="menu_checker">Checador</string>
    <string name="menu_checker_list">Lista de checador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings para login -->
    <string name="login_text_email">Correo</string>
    <string name="login_text_password">Contraseña</string>
    <string name="login_text_button">Iniciar sesion</string>
    <string name="login_text_link">Crear una cuenta</string>
    <string name="login_text_welcome">Bienvenido</string>
    <string name="login_text_error">Error iniciando sesion</string>
    <string name="login_text_remember">Recordarme</string>
</resources>